feat: add real indicator values to indicator page
fix #1